--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ li:hover {
 }
 
 p {
-  margin-top: 50px;
+  margin-bottom: 50px;
   text-align: left;
   font-size: 0.8rem;
   font-weight: 200;
