--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ li:hover {
   justify-content: space-around;
   text-align: left;
   flex-direction: row;
-  width: 60%;
+  min-width: 300px;
   margin-bottom: 50px;
 }
 
@@ -87,7 +87,7 @@ li:hover {
   text-align: left;
   margin: 0;
   gap: 1rem;
-  width: 60%;
+  width: 300px;
   height: 100%;
   /* background-color: rgba(100, 100, 100, 60%); */
 }
